--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "esm": "^3.2.25",
     "express": "^4.17.2",
+    "fs-extra": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "sequelize": "^6.13.0",
     "sqlite": "^4.0.23",
     "sqlite3": "^5.0.2"
   },
