--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "fs-extra": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "sequelize": "^6.13.0",
     "sqlite": "^4.0.23",
     "sqlite3": "^5.0.2"
