--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
+    "nodemailer": "^6.7.5",
     "sequelize": "^6.13.0",
     "sqlite": "^4.0.23",
     "sqlite3": "^5.0.2"
