--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "nodemailer": "^6.7.5",
     "sequelize": "^6.13.0",
     "sqlite": "^4.0.23",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "transbank-sdk": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
