--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "esm": "^3.2.25",
     "express": "^4.17.2",
     "fs-extra": "^10.0.0",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
@@ -35,7 +36,9 @@
     "socket.io": "^4.5.1",
     "sqlite": "^4.0.23",
     "sqlite3": "^5.0.2",
-    "transbank-sdk": "^3.0.2"
+    "transbank-sdk": "^3.0.2",
+    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.4.0",
+    "ws": "^8.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
