--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
     "nodemailer": "^6.7.5",
+    "pdfkit": "^0.13.0",
+    "pdfkit-table": "^0.1.99",
     "pug": "^3.0.2",
     "sequelize": "^6.13.0",
     "serve-favicon": "^2.5.0",
