--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "debug": "^4.3.4",
     "dotenv": "^10.0.0",
     "esm": "^3.2.25",
+    "exceljs": "^4.3.0",
     "express": "^4.17.2",
     "fs-extra": "^10.0.0",
     "http": "^0.0.1-security",
