--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fs-extra": "^10.0.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "mariadb": "^3.0.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
     "morgan": "^1.10.0",
